--- a/menu_footer/menumain.html
+++ b/menu_footer/menumain.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="../index.php">Inicio</a></li>
-            <li><a href="../InformacionAMH.php">Productos</a></li>
+            <li><a href="../productos.php">Productos</a></li>
             <li><a href="../Noticias.php">Sobre Nosotros</a></li>
 
         </ul>
