--- a/menu_footer/footerefects.html
+++ b/menu_footer/footerefects.html
@@ -18,7 +18,7 @@
                     <div class="footer-col">
                         <h4>Contactos</h4>
                         <ul class="listaFooter">
-                            <li><a href="#">direccion</a></li>
+                            <li><a href="#">dirección</a></li>
                             <li><a href="#"></a></li>
                             <li><a href="#"></a></li>
                             <li><a href="#"></a></li>
