--- a/menu_footer/menumain.html
+++ b/menu_footer/menumain.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 <nav class="menuprincipal">
-    <div id="header" class="container cotenidoMain">
+    <div id="header" class="cotenidoMain">
         <div class="row justify-content-center">
-            <div class="col-md-6" id="image">
-                <a href="../index.php"><img src="/img/logo-pasteleria-1.png" class="img-fluid" alt="Logo AMH" alt="Logo: Escuela Secundaria Ángel María Herrera" title="Logo: Escuela Secundaria Ángel María Herrera"></a>
+            <div class="col-md-12" id="image">
+                <a href="../index.php"><img src="/img/logo-pasteleria-1.png" class="img-fluid" alt="Logo AMH" alt="Logo: Escuela Secundaria Ángel María Herrera" title="Logo: Escuela Secundaria Ángel María Herrera" ></a>
             </div>
         </div>
     </div>
@@ -16,7 +16,7 @@
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="../index.php">Inicio</a></li>
             <li><a href="../productos.php">Productos</a></li>
-            <li><a href="../Noticias.php">Sobre Nosotros</a></li>
+            <li><a href="../sobrenosotros.php">Sobre Nosotros</a></li>
 
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
