--- a/menu_footer/footerefects.html
+++ b/menu_footer/footerefects.html
@@ -26,12 +26,12 @@
                         </ul>
                     </div>
                     <div class="footer-col">
-                        <h4>Exámenes Ginecológicos</h4>
+                        <h4></h4>
                         <ul class="listaFooter">
-                            <li><a href="#">Bipsias de diferentes tejidos</a></li>
-                            <li><a href="#">Ecografía ginecológica</a></li>
-                            <li><a href="#">Histeroscopia</a></li>
-                            <li><a href="#">Mamografía</a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
                         </ul>
                     </div>
                     <div class="footer-col">
@@ -74,7 +74,7 @@
     <!--Header ends-->
     
     <!--Content inicio-->
-    <div class="content">
+    <div class="content" id="letrafooter">
         ©  2022 Copyright 
         <br>
         UTP - Centro Regional de Coclé &copy; Facilitadora del Curso: Ing. María Y. Tejedor de Fernández
