--- a/menu_footer/menumain.html
+++ b/menu_footer/menumain.html
@@ -16,7 +16,7 @@
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="../index.php">Inicio</a></li>
             <li><a href="../productos.php">Productos</a></li>
-            <li><a href="../sobrenosotros.php">Sobre Nosotros</a></li>
+            <li><a href="../sobrenosotros.php">Nosotros</a></li>
 
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
