--- a/contenido/nosotros.html
+++ b/contenido/nosotros.html
@@ -1,14 +1,45 @@
 <div class="contenedornosotros">
     <div class="container text-center">
-        <h2 class="estiloletra1">Conoce sobre nosotros</h2>
+
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container" id="jumboconten">
+                <h1 class="display-4">SOBRE NOSOTROS</h1>
+                <hr>
+            </div>
+        </div>
+
 
 
         <div class="contmapa">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7891.691777453695!2d-80.3517906265747!3d8.51434000109382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fac4f38925f5fdb%3A0x42cd0bf32ce795fd!2sPits%20Burguer%20%26%20Grill!5e0!3m2!1ses!2spa!4v1669949440447!5m2!1ses!2spa"
-                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
+        <div class="conttextoanimation">
+            <div id=container>
+                Realizamos
+                <div id=flip>
+                    <div>
+                        <div>Trabajos</div>
+                    </div>
+                    <div>
+                        <div>Momentos</div>
+                    </div>
+                    <div>
+                        <div>Todo</div>
+                    </div>
+                </div>
+
+                increíble!
+            </div>
+        </div>
+
+
+
+
 
 
         <div class="container" id="contenedorinfo">
@@ -88,17 +119,8 @@
             </div>
         </div>
 
-        <div>
-            <div class="card mb-3">
-                <img src="/img/pastel2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-        </div>
-        
+
+
     </div>
 
 
