--- a/contenido/nosotros.html
+++ b/contenido/nosotros.html
@@ -1,10 +1,15 @@
 <div class="contenedornosotros">
+
+
+    <br><br>
     <div class="container text-center">
 
 
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid" id="fondojumbo">
             <div class="container" id="jumboconten">
-                <h1 class="display-4">SOBRE NOSOTROS</h1>
+                <div class="container-text">
+                    SOBRE NOSOTROS
+                </div>
                 <hr>
             </div>
         </div>
@@ -12,12 +17,15 @@
 
 
         <div class="contmapa">
+            <h3 id="letranosostros">Ubicación</h3>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7891.691777453695!2d-80.3517906265747!3d8.51434000109382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fac4f38925f5fdb%3A0x42cd0bf32ce795fd!2sPits%20Burguer%20%26%20Grill!5e0!3m2!1ses!2spa!4v1669949440447!5m2!1ses!2spa"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.815015518168!2d-80.16765178963122!3d8.376060229148514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fac54b8e3b3be37%3A0x8118b9e9737dda33!2sManzana%20020207%20196-1%2C%20R%C3%ADo%20Hato%2C%20Panam%C3%A1!5e0!3m2!1ses!2sus!4v1670027201094!5m2!1ses!2sus"
                 width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p>Lismi Cake's está ubicado en Río Hato, Barrio Lindo a un costado del cuadro de Softbol, Casa de color
+                azul turquesa </p>
         </div>
-
+        <br><br>
         <div class="conttextoanimation">
             <div id=container>
                 Realizamos
@@ -37,13 +45,41 @@
             </div>
         </div>
 
+        <!-- historia -->
+
+        <div id="circle-shape-example">
+            <img src="/img/48320408-d2cc-4c6a-8377-1e36363788dd.jpg" class="curve">
+            <h1 id="letranosostros">Historia</h1>
+
+            <p class="textohistoria">El nombre del emprendimiento es “LISMI CAKE’S”. Su nombre debe a la abreviación del
+                primer y
+                segundo nombre de la creadora (Lismeth Mitchell) y en español significa los “LOS PASTELES DE LISMI
+
+                Se puede hablar de Lismi Cake's desde el año 2019, cuando por hobby, se compró los primeros instrumentos
+                de repostería con la intención de realizar la decoración de pasteles para las fiestas de sus familiares.
+                Sin embargo, al postear estas fotos en las redes sociales personales, conocidos y amigos se empezaron a
+                interesar y preguntar si se realizan para la venta.
+
+                En el 2020 con la llegada de la pandemia cierran muchos locales incluidos las panaderías, por lo que no
+                había locales donde adquirir pasteles, así que la demanda aumenta del producto grandemente.
+
+                Lismi Cake's inicia formalmente el 4 de junio de 2020 fecha en la que crea sus redes sociales para
+                promocionar y vender sus productos.
+
+                Hoy a más de 2 años después dejó de ser un hobby, y aunque se sigue haciendo porque es algo que le
+                gusta, se convirtió en un trabajo formal que se maneja con mucha responsabilidad.
+            </p>
+        </div>
 
 
 
+        <!-- fin de historia -->
 
-
+        <div class="container-text">
+            Misión y Visión
+        </div>
         <div class="container" id="contenedorinfo">
-            <h2 class="estiloletra1">Misión y Visión</h2>
+
 
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -56,16 +92,9 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body" id="letra3">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes
-                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
-                            can
-                            modify any of this with custom CSS or overriding our default variables. It's also worth
-                            noting
-                            that just about any HTML can go within the <code>.accordion-body</code>, though the
-                            transition
-                            does limit overflow.
+                            Como negocio nuestra misión es crear, sorprender y hacer pasteles y postres gran calidad,
+                            que brinden recuerdos que complementen la felicidad de cada celebración combinando las ideas
+                            de nuestros clientes y nuestro talento para hacer más dulce cada momento especial
                         </div>
                     </div>
                 </div>
@@ -79,40 +108,10 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body" id="letra3">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes
-                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
-                            can
-                            modify any of this with custom CSS or overriding our default variables. It's also worth
-                            noting
-                            that just about any HTML can go within the <code>.accordion-body</code>, though the
-                            transition
-                            does limit overflow.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body" id="letra3">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes
-                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
-                            can
-                            modify any of this with custom CSS or overriding our default variables. It's also worth
-                            noting
-                            that just about any HTML can go within the <code>.accordion-body</code>, though the
-                            transition
-                            does limit overflow.
+                            Lismi Cake’s será una pastelería que brinde momentos de felicidad a través de
+                            productos de gran calidad y con diseños personalizados, creciendo de a mano de nuestros
+                            clientes y permitiendo crear experiencia y buenos recuerdos en cada celebración o
+                            festividad.
                         </div>
                     </div>
                 </div>
