--- a/contenido/productos.html
+++ b/contenido/productos.html
@@ -1,145 +1,22 @@
-<div class="cont">
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	<div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-	 <div class="card">
-	  <div class="image">
-		<img src="https://ariwoza.github.io/PANADERIA/img/1pansuizo.jpg" alt="">
-	  </div>
-	  <h2>
-		Pan Integral
-	  </h2>
-	  <p>
-		Bloque de pan en moje de masa integral con salvado, cero azúcar y grasa.
-	  </p>
-  </div>
-  </div>
+
+<!-- ssssssssssssssssssssssssssss -->
+<div class="GaleriaFotosPremedia">
+	<h1 class="letra3">Nuestras creaciones</h1>
+	<hr>
+	<div id="gallery" class="container-fluid">
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.32.52 AM (1).jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.35.57 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.39.38 AM.jpeg" class="img-responsive"><!--  -->
+
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.39.58 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.42.52 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.47.50 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.48.38 AM.jpeg" class="card img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.49.43 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.50.04 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.51.39 AM (1).jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.51.39 AM.jpeg" class="img-responsive"><!--  -->
+		<img src="/img/WhatsApp Image 2022-10-05 at 10.51.40 AM (1).jpeg" class="img-responsive"><!--  -->
+		<img src="/img//48320408-d2cc-4c6a-8377-1e36363788dd.jpg" class="img-responsive"><!--  -->
+	</div>
+</div>
