--- a/menu_footer/menumain.html
+++ b/menu_footer/menumain.html
@@ -3,8 +3,8 @@
 <nav class="menuprincipal">
     <div id="header" class="cotenidoMain">
         <div class="row justify-content-center">
-            <div class="col-md-12" id="image">
-                <a href="../index.php"><img src="/img/logo-pasteleria-1.png" class="img-fluid" alt="Logo AMH" alt="Logo: Escuela Secundaria Ángel María Herrera" title="Logo: Escuela Secundaria Ángel María Herrera" ></a>
+            <div class="col-md-8" id="image">
+                <a href="../index.php"><img src="/img/logo-pasteleria-1.png"  ></a>
             </div>
         </div>
     </div>
