--- a/contenido/CarruselPrincipal.html
+++ b/contenido/CarruselPrincipal.html
@@ -3,16 +3,16 @@
   
       <div class="CarruselPrincipal">
         <div class="itemCarrusel ">
-          <img id="imgCarrusel1" class="" src="/img/pastel1.jpg"  alt="Carrusel1">
+          <img id="imgCarrusel1" class="" src="/img/WhatsApp Image 2022-10-05 at 10.49.43 AM.jpeg"  alt="Carrusel1">
         </div>
         <div class="itemCarrusel hideItemCarrusel">
-          <img id="imgCarrusel2" class="" src="/img/pastel2.jpg" alt="Carrusel2">
+          <img id="imgCarrusel2" class="" src="/img/WhatsApp Image 2022-10-05 at 10.51.40 AM (1).jpeg" alt="Carrusel2">
         </div>
         <div class="itemCarrusel hideItemCarrusel">
-          <img id="imgCarrusel3" class="" src="/img/pastel3.jpg" alt="Carrusel3">
+          <img id="imgCarrusel3" class="" src="/img/WhatsApp Image 2022-10-05 at 10.47.50 AM.jpeg" alt="Carrusel3">
         </div>
         <div class="itemCarrusel hideItemCarrusel">
-          <img id="imgCarrusel4" class="" src="/img/pastel4.jpg" alt="Carrusel4">
+          <img id="imgCarrusel4" class="" src="/img/WhatsApp Image 2022-10-05 at 10.50.04 AM.jpeg" alt="Carrusel4">
         </div>
         <div class="itemCarrusel hideItemCarrusel">
             <img id="imgCarrusel4" class="" src="/img/pastel5.jpg" alt="Carrusel5">
