--- a/contenido/contenidoinicial.html
+++ b/contenido/contenidoinicial.html
@@ -4,42 +4,42 @@
             <ul tabindex="0">
                 <li id="c1_slide1" class="selected">
                     <div>
-                        <div></div>Nice cat number 1<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-Pasteles redondos-<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide2">
                     <div>
-                        <div></div>Nice cat number 2<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-Pasteles de pisos-<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide3">
                     <div>
-                        <div></div>Nice cat number 3<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-- Flanes --<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide4">
                     <div>
-                        <div></div>Nice cat number 4<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>- Galletas -<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide5">
                     <div>
-                        <div></div>Nice cat number 5<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-Pasteles redondos-<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide6">
                     <div>
-                        <div></div>Nice cat number 6<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-Pasteles de pisos-<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide7">
                     <div>
-                        <div></div>Nice cat number 7<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>-- Flanes --<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
                 <li id="c1_slide8">
                     <div>
-                        <div></div>Nice cat number 8<br /><a href="https://www.google.com">adopt me</a>
+                        <div></div>- Galletas -<br /><a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank">comprar</a>
                     </div>
                 </li>
             </ul>
@@ -59,12 +59,9 @@
     </div>
 </center>
 
+<br><br><br>
 
-
-<h2>Technique</h2>
-<p>The above is an unordened list with horizontal overflow set to auto, snap scrolling and hidden scrollbars. You can
-    swipe the carousel with your finger on touch screens through native touch scroll. You can use the arrow keys on your
-    keyboard to scroll the carousel (when the carousel has focus). The bullets are actually anchor links, which trigger
-    a 'scroll-behaviour: smooth' scroll. The script uses a simple setInterval for autoplay which does not fire during
-    hover and can be set on the carousel div in a custom attribute in milliseconds. Also checkout the <a
-        href="https://codepen.io/joosts/pen/MWJBPgo" target="_top">Carousel with CSS scroll snap</a>.</p>
+<p class="textoproductos">Nuestros productos tienen la característica de ser diseñados de acuerdo a las necesidad y especificaciones del
+    cliente buscando combinar su idea con nuestros talentos y en el caminos crear algo que lo sorprenda y que supere sus
+    expectativas en cuanto a sabor, diseño y combinación de colores formas y sabores buscamos que nuestros productos
+    creen experiencias y sean parte de la felicidad de los clientes.</p>
