--- a/menu_footer/footerefects.html
+++ b/menu_footer/footerefects.html
@@ -10,7 +10,7 @@
                         <h4>Creadores</h4>
                         <ul class="listaFooter">
                             <li><a href="#">Deysi Gordón</a></li>
-                            <li><a href="#">a</a></li>
+                            <li><a href="#">Lismeth Mitchell</a></li>
                             <li><a href="#">a</a></li>
                             
                         </ul>
@@ -18,9 +18,9 @@
                     <div class="footer-col">
                         <h4>Contactos</h4>
                         <ul class="listaFooter">
-                            <li><a href="#">dirección</a></li>
                             <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#"><i class="bi bi-geo-alt"></i> Río Hato, Barrio Lindo a un costado del cuadro de Softbol, Casa de color azul turquesa </a></li>
+                            <li><a href="#"><i class="bi bi-telephone"></i> 65948725</a></li>
                             <li><a href="#"></a></li>
                             <li><a href="#"></a></li>
                         </ul>
@@ -37,10 +37,10 @@
                     <div class="footer-col">
                         <h4>Redes Sociales</h4>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank"><i class="bi bi-whatsapp"></i>
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://instagram.com/_lismicakes?igshid=N2ZiY2E3YmU=" target="_blank"><i class="fab fa-instagram"></i></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
     <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
     </defs>
     <g class="parallax">
-    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
     <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
     <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
     <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
@@ -77,6 +77,6 @@
     <div class="content" id="letrafooter">
         ©  2022 Copyright 
         <br>
-        UTP - Centro Regional de Coclé &copy; Facilitadora del Curso: Ing. María Y. Tejedor de Fernández
+        UTP - Centro Regional de Coclé 
     </div>
     <!--Content final-->
