--- a/menu_footer/footerefects.html
+++ b/menu_footer/footerefects.html
@@ -37,9 +37,9 @@
                     <div class="footer-col">
                         <h4>Redes Sociales</h4>
                         <div class="social-links">
-                            <a href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank"><i class="bi bi-whatsapp"></i>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="https://instagram.com/_lismicakes?igshid=N2ZiY2E3YmU=" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a class="iconossociales" href="https://wa.me/message/XXCM4CYBFHP3D1" target="_blank"><i class="bi bi-whatsapp"></i>
+                            <a class="iconossociales" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="iconossociales" href="https://instagram.com/_lismicakes?igshid=N2ZiY2E3YmU=" target="_blank"><i class="fab fa-instagram"></i></a>
                             
                         </div>
                     </div>
