--- a/contenido/contenidoindex.html
+++ b/contenido/contenidoindex.html
@@ -1,70 +1,79 @@
 <hr>
 <br><br>
-<div class="grids">
-    <center></center>
-    <h2>QUÉ NOS DIFERENCIA</h2>
+<div id="contenedorcartas">
+    <center>
+        <h2 id="letranosostros">QUÉ NOS DIFERENCIA</h2>
+
+    </center>
+
+    <div class="grids">
 
 
 
-    <div class="card-three">
-        <div class="card">
-            <div class="card__side card__side--front" id="front-3">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">INNOVACIÓN</h1>
-                    <h3 class="text-box-lower"></h3>
+
+
+        <div class="card-three">
+            <div class="card">
+                <div class="card__side card__side--front" id="front-3">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">INNOVACIÓN</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
                 </div>
-            </div>
-            <div class="card__side card__side--back" id="back-3">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">CALIDAD!</h1>
-                    <h3 class="text-box-lower"></h3>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="card-four">
-        <div class="card">
-            <div class="card__side card__side--front" id="front-4">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">PERZONALIZACIÓN!</h1>
-                    <h3 class="text-box-lower"></h3>
-                </div>
-            </div>
-            <div class="card__side card__side--back" id="back-4">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">SABOR!</h1>
-                    <h3 class="text-box-lower"></h3>
+                <div class="card__side card__side--back" id="back-3">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">CALIDAD!</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="card-five">
-        <div class="card">
-            <div class="card__side card__side--front" id="front-5">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">PEDIDOS!</h1>
-                    <h3 class="text-box-lower"></h3>
+        <div class="card-four">
+            <div class="card">
+                <div class="card__side card__side--front" id="front-4">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">PERZONALIZACIÓN!</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
                 </div>
-            </div>
-            <div class="card__side card__side--back" id="back-5">
-                <div class="text-box">
-                    <h3 class="text-box-top"></h3>
-                    <h1 class="text-box-middle">RESPONSABILIDAD!</h1>
-                    <h3 class="text-box-lower"></h3>
+                <div class="card__side card__side--back" id="back-4">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">SABOR!</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="card-five">
+            <div class="card">
+                <div class="card__side card__side--front" id="front-5">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">PEDIDOS!</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
+                </div>
+                <div class="card__side card__side--back" id="back-5">
+                    <div class="text-box">
+                        <h3 class="text-box-top"></h3>
+                        <h1 class="text-box-middle">RESPONSABILIDAD!</h1>
+                        <h3 class="text-box-lower"></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
-
-
-
 </div>
 <br><br><br>
 <hr>
+
+<!-- productos -->
