--- a/contenido/contenidoindex.html
+++ b/contenido/contenidoindex.html
@@ -1,3 +1,19 @@
+<div class="supercontenedor">
+
+
+    <div class='console-container'><span id='text'></span>
+        <div class='console-underscore' id='console'>&#95;</div>
+    </div>
+
+
+</div>
+
+
+
+
+
+
+
 <hr>
 <br><br>
 <div id="contenedorcartas">
@@ -76,3 +92,34 @@
 <hr>
 
 <!-- productos -->
+
+<div class="container">
+    <div id="circle-shape-example">
+        <center>
+            <img src="/img/logo.png" class="curve">
+            <h1 id="letranosostros">Lismi Cake’s</h1>
+
+            <p class="textohistoria">La cartera de productos de Lismi Cake’s aun siendo un producto tan clásico como un
+                pastel logramos darle la vuelta y crear una serie de productos y creaciones caseras pero con gran
+                calidad y con una buena estética combinando colores, formas y diseños que atraen y hacen sentir
+                satisfechos a los clientes entre algunos productos están:
+            <ul class="textolista">
+                <li >Pasteles redondos de: 30cm de diámetro, 25cm de diámetro, 22cm de diámetro, 18cm de diámetro, 16cm
+                    de diámetro, 5” pulgadas y 4” pulgadas de diámetro. </li>
+                <li >Pasteles de pisos (De dos, tres y cuatro pisos). </li>
+                <li >Dulces en forma de número </li>
+                <li >Dulces en forma de letra. </li>
+                <li >Cupcakes </li>
+                <li >Galletas </li>
+                <li >Cakepops </li>
+                <li >Chocoflanes </li>
+                <li >Flanes </li>
+                <li >Chessecakes </li>
+                <li >Tres leches </li>
+            </ul>
+            </p>
+        </center>
+
+
+    </div>
+</div>
