--- a/contenido/contenidoinicial.html
+++ b/contenido/contenidoinicial.html
@@ -1,7 +1,7 @@
 <center>
     
         
-        <div class="container" id="jumboconten">
+        <div class="container" id="CONTENIDOPRODUCTOS">
             <div class="container-text">
                 Nuestros productos
              </div>
@@ -87,7 +87,7 @@
     cliente buscando combinar su idea con nuestros talentos y en el caminos crear algo que lo sorprenda y que supere sus
     expectativas en cuanto a sabor, diseño y combinación de colores formas y sabores buscamos que nuestros productos
     creen experiencias y sean parte de la felicidad de los clientes.</p>
-<hr>
+
 
 <br>
 <p class="textoproductos">En el mercado existen muchas panaderías y pastelerías que se dedican a vender dulces o
