--- a/contenido/nosotros.html
+++ b/contenido/nosotros.html
@@ -92,7 +92,7 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body" id="letra3">
-                            Como negocio nuestra misión es crear, sorprender y hacer pasteles y postres gran calidad,
+                            Como negocio nuestra misión es crear, sorprender y hacer pasteles y postres de gran calidad,
                             que brinden recuerdos que complementen la felicidad de cada celebración combinando las ideas
                             de nuestros clientes y nuestro talento para hacer más dulce cada momento especial
                         </div>
