cambios finales totalmete

--- a/menu_footer/footerefects.html
+++ b/menu_footer/footerefects.html
@@ -11,7 +11,8 @@
                         <ul class="listaFooter">
                             <li><a href="#">Deysi Gordón</a></li>
                             <li><a href="#">Lismeth Mitchell</a></li>
-                            <li><a href="#">a</a></li>
+                            <li><a href="#">Ilka Jaén</a></li>
+                            <li><a href="#">Laritza Patiño</a></li>
                             
                         </ul>
                     </div>
