--- a/contenido/productos.html
+++ b/contenido/productos.html
@@ -64,7 +64,7 @@
 		<img src="/img/WhatsApp Image 2022-10-05 at 10.39.38 AM.jpeg" class="img-responsive" id="imagen1"><!--  -->
 
 		<img src="/img/WhatsApp Image 2022-10-05 at 10.39.58 AM.jpeg" class="img-responsive" id="imagen2"><!--  -->
-		<img src="/img/WhatsApp Image 2022-10-05 at 10.42.52 AM.jpeg" class="img-responsive" id="imagen1"><!--  -->
+		<img src="/img/modificada.jpg" class="img-responsive" id="imagen1"><!--  -->
 		<img src="/img/WhatsApp Image 2022-10-05 at 10.47.50 AM.jpeg" class="img-responsive" id="imagen2"><!--  -->
 		<img src="/img/WhatsApp Image 2022-10-05 at 10.48.38 AM.jpeg" class="card img-responsive" id="imagen2"><!--  -->
 		<img src="/img/WhatsApp Image 2022-10-05 at 10.49.43 AM.jpeg" class="img-responsive" id="imagen1"><!--  -->
